edits to header icons and links

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -2,8 +2,8 @@
 import '../styles/global.css';
 
 const {
-	title = 'Tom Tranfaglia Personal Site',
-	description = 'The personal site of Tom Tranfaglia',
+	title = 'Tom Tranfaglia Punk Rock Photography and Musings Site',
+	description = 'Tom tells it like it is',
 } = Astro.props;
 ---
 
@@ -18,5 +18,4 @@ const {
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
 	href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
-	rel="stylesheet"
-/>
+	rel="stylesheet" />
