--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -208,8 +208,8 @@ const featuredProject = projects[0];
 				width="1600"
 				height="1131"
 				class="img"
-				src="/assets/pedalboard033@033x.png?w=1200&q=75"
-					alt=""/>
+				src="/assets/pedalboard600x800.png"
+					alt="Jays Pedal Board" title='Jays Pedal Board'/>
 			
 			<div class="overlay">
 				<h1 class="title">
