updated about page with resume

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,12 +40,37 @@ import Nav from '../components/Nav.astro';
 					src="/assets/mercury.jpg?auto=format&fit=crop&w=1400&h=350&q=75"
 				/>
 			</div>
-			<div class="bio wrapper">
-				<p>
-					Cream cheese say cheese stinking bishop. Brie fondue hard cheese bocconcini feta camembert
-					de normandie babybel airedale. Red leicester swiss manchego mascarpone pepper jack
-					airedale fromage frais ricotta. Cheese and biscuits cauliflower cheese boursin.
-				</p>
+<div class="bio wrapper">
+	<h2>SUMMARY</h2>
+
+	<p>Experienced web developer with 22 years of experience building accessible websites. 
+	</p>
+
+	<p>Strong background in developing and maintaining websites and applications on behalf of the California Department of Education and the Federal Office of Special Education Programs. </p>
+
+	<p>Proven track record of finding solutions to overcome productivity hurdles and providing technical expertise and support during project scope development.</p>
+
+	<h2>EXPERIENCE</h2>
+
+	<h3>Napa County Office of Education, Petaluma, CA  — Technology Coordinator</h3>	
+	
+	<p class="date-range">	February 2007 - PRESENT</p>
+
+	<p>Develop and maintain accessible  websites and applications on behalf of the California Department of Education and the Federal Office of Special Education Programs. </p>
+
+	<p>Find  solutions to overcome productivity hurdles. </p>
+
+	<p>Provide technical expertise and support during  project scope development. </p>
+
+	<h3>California Institute on Human Services Sonoma State University, Rohnert Park, CA —Lead Web Developer</h3>
+	<p class='date-range'>April 2002  - February  2007</p>
+	
+	<p>Responsible for Developing  and maintaining accessible websites and applications on behalf of the California Department of Education and the Federal Office of Special Education Programs.</p> 
+	
+	<h3>Cisco Systems, Petaluma — Assistant Web Developer, Flash Developer</h3>
+	<p class='date-range'>July  2000 - October  2001</p>
+
+	<p>Maintained the Optical Transport Business Unit intranet. Developed marketing material using Adobe Flash Technology. </p>
 				
 			</div>
 		</div>
